lib/02core/string_no_alloc/string_noalloc.h

void *memcpy(void *dest, const void *src, usize n);
void *memmove(void *dest, const void *src, usize n);
i32 memcmp(const void *lhs, const void *rhs, usize n);
void *memchr(const void *ptr, i32 ch, usize n);
void *memrchr(const void *ptr, i32 ch, usize n);
void *memmem(const void *haystack, usize haystack_len,
             const void *needle, usize needle_len);
void *memset(void *dest, i32 ch, usize n);
void memzero_explicit(void *dest, usize n);
void *mempcpy(void *dest, const void *src, usize n);
usize strlen(const char *str);
usize strnlen(const char *str, usize max_len);
i32 strcmp(const char *lhs, const char *rhs);
i32 strncmp(const char *lhs, const char *rhs, usize n);
i32 strcasecmp_ascii(const char *lhs, const char *rhs);
i32 strncasecmp_ascii(const char *lhs, const char *rhs, usize n);
char *strchr(const char *str, i32 ch);
char *strrchr(const char *str, i32 ch);
char *strchrnul(const char *str, i32 ch);
char *strnchr(const char *str, usize count, i32 ch);
char *strstr(const char *haystack, const char *needle);
char *strnstr(const char *haystack, const char *needle, usize len);
char *strcasestr_ascii(const char *haystack, const char *needle);
usize strspn(const char *str, const char *accept);
usize strcspn(const char *str, const char *reject);
char *strpbrk(const char *str, const char *accept);
i32 strstarts(const char *str, const char *prefix);
i32 strends(const char *str, const char *suffix);
usize strlcpy(char *dest, const char *src, usize size);
usize strlcat(char *dest, const char *src, usize size);
isize strscpy(char *dest, const char *src, usize size);
char *stpcpy(char *dest, const char *src);
char *strsep(char **stringp, const char *delim);
char *strtok(char *str, const char *delim);
char *strtok_r(char *str, const char *delim, char **saveptr);
const char *skip_spaces(const char *str);
char *strim(char *str);
const char *kbasename(const char *path);