lib/02core/string_no_alloc/lib.rs

//generated by gpt-5.6-sol<noreply@openai.com> @ codex
//C 实现的 no_std、无 alloc Rust 最小包装

#![no_std]

use core::ffi::{c_char, c_void, CStr};
use core::marker::PhantomData;
use core::ptr;

#[derive(Clone, Copy, Debug, Eq, PartialEq)]
pub enum BufferError {
    MissingNul,
    TooSmall,
}

unsafe extern "C" {
    #[link_name = "memcpy"]
    fn c_memcpy(dest: *mut c_void, src: *const c_void, n: usize) -> *mut c_void;
    #[link_name = "memmove"]
    fn c_memmove(dest: *mut c_void, src: *const c_void, n: usize) -> *mut c_void;
    #[link_name = "memcmp"]
    fn c_memcmp(lhs: *const c_void, rhs: *const c_void, n: usize) -> i32;
    #[link_name = "memchr"]
    fn c_memchr(ptr: *const u8, ch: i32, n: usize) -> *mut u8;
    #[link_name = "memrchr"]
    fn c_memrchr(ptr: *const u8, ch: i32, n: usize) -> *mut u8;
    #[link_name = "memmem"]
    fn c_memmem(
        haystack: *const u8,
        haystack_len: usize,
        needle: *const u8,
        needle_len: usize,
    ) -> *mut u8;
    #[link_name = "memset"]
    fn c_memset(dest: *mut c_void, ch: i32, n: usize) -> *mut c_void;
    #[link_name = "mempcpy"]
    fn c_mempcpy(dest: *mut u8, src: *const u8, n: usize) -> *mut u8;
    #[link_name = "memzero_explicit"]
    fn c_memzero_explicit(dest: *mut u8, n: usize);

    #[link_name = "strlen"]
    fn c_strlen(str_: *const c_char) -> usize;
    #[link_name = "strnlen"]
    fn c_strnlen(str_: *const c_char, max_len: usize) -> usize;
    #[link_name = "strcmp"]
    fn c_strcmp(lhs: *const c_char, rhs: *const c_char) -> i32;
    #[link_name = "strncmp"]
    fn c_strncmp(lhs: *const c_char, rhs: *const c_char, n: usize) -> i32;
    #[link_name = "strcasecmp_ascii"]
    fn c_strcasecmp_ascii(lhs: *const c_char, rhs: *const c_char) -> i32;
    #[link_name = "strncasecmp_ascii"]
    fn c_strncasecmp_ascii(lhs: *const c_char, rhs: *const c_char, n: usize) -> i32;
    #[link_name = "strchr"]
    fn c_strchr(str_: *const c_char, ch: i32) -> *mut c_char;
    #[link_name = "strrchr"]
    fn c_strrchr(str_: *const c_char, ch: i32) -> *mut c_char;
    #[link_name = "strchrnul"]
    fn c_strchrnul(str_: *const c_char, ch: i32) -> *mut c_char;
    #[link_name = "strnchr"]
    fn c_strnchr(str_: *const c_char, count: usize, ch: i32) -> *mut c_char;
    #[link_name = "strstr"]
    fn c_strstr(haystack: *const c_char, needle: *const c_char) -> *mut c_char;
    #[link_name = "strnstr"]
    fn c_strnstr(haystack: *const c_char, needle: *const c_char, len: usize) -> *mut c_char;
    #[link_name = "strcasestr_ascii"]
    fn c_strcasestr_ascii(haystack: *const c_char, needle: *const c_char) -> *mut c_char;
    #[link_name = "strspn"]
    fn c_strspn(str_: *const c_char, accept: *const c_char) -> usize;
    #[link_name = "strcspn"]
    fn c_strcspn(str_: *const c_char, reject: *const c_char) -> usize;
    #[link_name = "strpbrk"]
    fn c_strpbrk(str_: *const c_char, accept: *const c_char) -> *mut c_char;
    #[link_name = "strstarts"]
    fn c_strstarts(str_: *const c_char, prefix: *const c_char) -> i32;
    #[link_name = "strends"]
    fn c_strends(str_: *const c_char, suffix: *const c_char) -> i32;
    #[link_name = "skip_spaces"]
    fn c_skip_spaces(str_: *const c_char) -> *const c_char;
    #[link_name = "kbasename"]
    fn c_kbasename(path: *const c_char) -> *const c_char;

    #[link_name = "strlcpy"]
    fn c_strlcpy(dest: *mut c_char, src: *const c_char, size: usize) -> usize;
    #[link_name = "strlcat"]
    fn c_strlcat(dest: *mut c_char, src: *const c_char, size: usize) -> usize;
    #[link_name = "strscpy"]
    fn c_strscpy(dest: *mut c_char, src: *const c_char, size: usize) -> isize;
    #[link_name = "stpcpy"]
    fn c_stpcpy(dest: *mut c_char, src: *const c_char) -> *mut c_char;
    #[link_name = "strim"]
    fn c_strim(str_: *mut c_char) -> *mut c_char;
    #[link_name = "strtok_r"]
    fn c_strtok_r(
        str_: *mut c_char,
        delim: *const c_char,
        saveptr: *mut *mut c_char,
    ) -> *mut c_char;
    #[link_name = "strsep"]
    fn c_strsep(stringp: *mut *mut c_char, delim: *const c_char) -> *mut c_char;
}

unsafe fn cstr_from_ptr<'a>(ptr: *const c_char) -> Option<&'a CStr> {
    if ptr.is_null() {
        None
    } else {
        Some(CStr::from_ptr(ptr))
    }
}

unsafe fn cstr_from_mut_ptr<'a>(ptr: *mut c_char) -> Option<&'a CStr> {
    cstr_from_ptr(ptr.cast_const())
}

pub trait CStrExt {
    fn strlen(&self) -> usize;
    fn strnlen(&self, max_len: usize) -> usize;
    fn strcmp(&self, other: &CStr) -> i32;
    fn strncmp(&self, other: &CStr, n: usize) -> i32;
    fn strcasecmp_ascii(&self, other: &CStr) -> i32;
    fn strncasecmp_ascii(&self, other: &CStr, n: usize) -> i32;
    fn strchr(&self, ch: u8) -> Option<&CStr>;
    fn strrchr(&self, ch: u8) -> Option<&CStr>;
    fn strchrnul(&self, ch: u8) -> &CStr;
    fn strnchr(&self, ch: u8, count: usize) -> Option<&CStr>;
    fn strstr(&self, needle: &CStr) -> Option<&CStr>;
    fn strnstr(&self, needle: &CStr, len: usize) -> Option<&CStr>;
    fn strcasestr_ascii(&self, needle: &CStr) -> Option<&CStr>;
    fn strspn(&self, accept: &CStr) -> usize;
    fn strcspn(&self, reject: &CStr) -> usize;
    fn strpbrk(&self, accept: &CStr) -> Option<&CStr>;
    fn starts_with_cstr(&self, prefix: &CStr) -> bool;
    fn ends_with_cstr(&self, suffix: &CStr) -> bool;
    fn skip_spaces(&self) -> &CStr;
    fn basename(&self) -> &CStr;
}

impl CStrExt for CStr {
    fn strlen(&self) -> usize {
        unsafe { c_strlen(self.as_ptr()) }
    }

    fn strnlen(&self, max_len: usize) -> usize {
        unsafe { c_strnlen(self.as_ptr(), max_len) }
    }

    fn strcmp(&self, other: &CStr) -> i32 {
        unsafe { c_strcmp(self.as_ptr(), other.as_ptr()) }
    }

    fn strncmp(&self, other: &CStr, n: usize) -> i32 {
        unsafe { c_strncmp(self.as_ptr(), other.as_ptr(), n) }
    }

    fn strcasecmp_ascii(&self, other: &CStr) -> i32 {
        unsafe { c_strcasecmp_ascii(self.as_ptr(), other.as_ptr()) }
    }

    fn strncasecmp_ascii(&self, other: &CStr, n: usize) -> i32 {
        unsafe { c_strncasecmp_ascii(self.as_ptr(), other.as_ptr(), n) }
    }

    fn strchr(&self, ch: u8) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strchr(self.as_ptr(), ch as i32)) }
    }

    fn strrchr(&self, ch: u8) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strrchr(self.as_ptr(), ch as i32)) }
    }

    fn strchrnul(&self, ch: u8) -> &CStr {
        unsafe { cstr_from_mut_ptr(c_strchrnul(self.as_ptr(), ch as i32)).unwrap() }
    }

    fn strnchr(&self, ch: u8, count: usize) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strnchr(self.as_ptr(), count, ch as i32)) }
    }

    fn strstr(&self, needle: &CStr) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strstr(self.as_ptr(), needle.as_ptr())) }
    }

    fn strnstr(&self, needle: &CStr, len: usize) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strnstr(self.as_ptr(), needle.as_ptr(), len)) }
    }

    fn strcasestr_ascii(&self, needle: &CStr) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strcasestr_ascii(self.as_ptr(), needle.as_ptr())) }
    }

    fn strspn(&self, accept: &CStr) -> usize {
        unsafe { c_strspn(self.as_ptr(), accept.as_ptr()) }
    }

    fn strcspn(&self, reject: &CStr) -> usize {
        unsafe { c_strcspn(self.as_ptr(), reject.as_ptr()) }
    }

    fn strpbrk(&self, accept: &CStr) -> Option<&CStr> {
        unsafe { cstr_from_mut_ptr(c_strpbrk(self.as_ptr(), accept.as_ptr())) }
    }

    fn starts_with_cstr(&self, prefix: &CStr) -> bool {
        unsafe { c_strstarts(self.as_ptr(), prefix.as_ptr()) != 0 }
    }

    fn ends_with_cstr(&self, suffix: &CStr) -> bool {
        unsafe { c_strends(self.as_ptr(), suffix.as_ptr()) != 0 }
    }

    fn skip_spaces(&self) -> &CStr {
        unsafe { cstr_from_ptr(c_skip_spaces(self.as_ptr())).unwrap() }
    }

    fn basename(&self) -> &CStr {
        unsafe { cstr_from_ptr(c_kbasename(self.as_ptr())).unwrap() }
    }
}

pub trait MemExt {
    fn memcmp(&self, other: &[u8]) -> i32;
    fn memchr(&self, byte: u8) -> Option<usize>;
    fn memrchr(&self, byte: u8) -> Option<usize>;
    fn memmem(&self, needle: &[u8]) -> Option<usize>;
}

impl MemExt for [u8] {
    fn memcmp(&self, other: &[u8]) -> i32 {
        let len = self.len().min(other.len());
        let result = unsafe { c_memcmp(self.as_ptr().cast(), other.as_ptr().cast(), len) };
        if result != 0 || self.len() == other.len() {
            result
        } else if self.len() < other.len() {
            -1
        } else {
            1
        }
    }

    fn memchr(&self, byte: u8) -> Option<usize> {
        let ptr = unsafe { c_memchr(self.as_ptr(), byte as i32, self.len()) };
        ptr_to_offset(self, ptr)
    }

    fn memrchr(&self, byte: u8) -> Option<usize> {
        let ptr = unsafe { c_memrchr(self.as_ptr(), byte as i32, self.len()) };
        ptr_to_offset(self, ptr)
    }

    fn memmem(&self, needle: &[u8]) -> Option<usize> {
        let ptr = unsafe { c_memmem(self.as_ptr(), self.len(), needle.as_ptr(), needle.len()) };
        ptr_to_offset(self, ptr)
    }
}

fn ptr_to_offset(slice: &[u8], ptr: *mut u8) -> Option<usize> {
    if ptr.is_null() {
        None
    } else {
        Some(unsafe { ptr.offset_from(slice.as_ptr()) as usize })
    }
}

pub trait MemMutExt {
    fn memset(&mut self, byte: u8);
    fn memzero_explicit(&mut self);
    fn memcpy_from(&mut self, source: &[u8]) -> Result<(), BufferError>;
    fn memmove_from(&mut self, source: &[u8]) -> Result<(), BufferError>;
    fn mempcpy_from(&mut self, source: &[u8]) -> Result<usize, BufferError>;
}

impl MemMutExt for [u8] {
    fn memset(&mut self, byte: u8) {
        unsafe {
            c_memset(self.as_mut_ptr().cast(), byte as i32, self.len());
        }
    }

    fn memzero_explicit(&mut self) {
        unsafe {
            c_memzero_explicit(self.as_mut_ptr(), self.len());
        }
    }

    fn memcpy_from(&mut self, source: &[u8]) -> Result<(), BufferError> {
        if source.len() > self.len() {
            return Err(BufferError::TooSmall);
        }
        unsafe {
            c_memcpy(
                self.as_mut_ptr().cast(),
                source.as_ptr().cast(),
                source.len(),
            );
        }
        Ok(())
    }

    fn memmove_from(&mut self, source: &[u8]) -> Result<(), BufferError> {
        if source.len() > self.len() {
            return Err(BufferError::TooSmall);
        }
        unsafe {
            c_memmove(
                self.as_mut_ptr().cast(),
                source.as_ptr().cast(),
                source.len(),
            );
        }
        Ok(())
    }

    fn mempcpy_from(&mut self, source: &[u8]) -> Result<usize, BufferError> {
        if source.len() > self.len() {
            return Err(BufferError::TooSmall);
        }
        let end = unsafe { c_mempcpy(self.as_mut_ptr(), source.as_ptr(), source.len()) };
        Ok(unsafe { end.offset_from(self.as_mut_ptr()) as usize })
    }
}

pub trait StrBufExt {
    fn strlcpy(&mut self, source: &CStr) -> Result<usize, BufferError>;
    fn strlcat(&mut self, source: &CStr) -> Result<usize, BufferError>;
    fn strscpy(&mut self, source: &CStr) -> Result<usize, BufferError>;
    fn stpcpy(&mut self, source: &CStr) -> Result<usize, BufferError>;
    fn strim(&mut self) -> Result<&mut [u8], BufferError>;
    fn strtok<'a, 'd>(&'a mut self, delimiters: &'d CStr) -> Result<StrTok<'a, 'd>, BufferError>;
    fn strsep<'a, 'd>(&'a mut self, delimiters: &'d CStr) -> Result<StrSep<'a, 'd>, BufferError>;
}

impl StrBufExt for [u8] {
    fn strlcpy(&mut self, source: &CStr) -> Result<usize, BufferError> {
        Ok(unsafe { c_strlcpy(self.as_mut_ptr().cast(), source.as_ptr(), self.len()) })
    }

    fn strlcat(&mut self, source: &CStr) -> Result<usize, BufferError> {
        ensure_nul(self)?;
        Ok(unsafe { c_strlcat(self.as_mut_ptr().cast(), source.as_ptr(), self.len()) })
    }
